--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -29,3 +29,10 @@ clear: both;
   border-top: 20rpx solid #000;
 }
 
+::-webkit-scrollbar{
+  display: none;
+  width: 0;
+  height: 0;
+  color:transparent;
+} 
+
