--- a/miniprogram/pages/chart/chart.wxml
+++ b/miniprogram/pages/chart/chart.wxml
@@ -12,11 +12,31 @@
     <view bindtap="changeTime" data-time="year" class="time-item fl {{timeType=='year'? 'active' : ''}}">年</view>
   </view>
 </view>
+<view class="total">总支出：200</view>
 
 <!-- <view class="pie">
       <canvas canvas-id="pieCanvas"style="width:{{width+'px'}}; height:620rpx;" ></canvas>
 </view> -->
 
-<view style="width:100%;height:250px;">
+<view class="chart" style="width:100%;height:250px;">
   <ec-canvas id="mychart-dom-pie2" canvas-id="mychart-pie2" ec="{{ ec }}"></ec-canvas>
+</view>
+
+<view class="rank-title">收入排行榜</view>
+
+<view class="rank">
+  <view class="rank-img">
+
+  </view>
+  <view class="rank-right">
+    <view class="content-top clearfix">
+      <view class="title fl">交通</view>
+      <view class="persent fl">100%</view>
+      <view class="count fr">4</view>
+    </view>
+
+    <view class="rank-progress">
+      <view class="bar" style="width:80%;"></view>
+    </view>
+  </view>
 </view>
