--- a/miniprogram/pages/chart/chart.wxss
+++ b/miniprogram/pages/chart/chart.wxss
@@ -58,3 +58,68 @@ ec-canvas {
   height: 70%;
   background: #eee;
 }
+
+
+.total{
+  /* margin-top: 250px; */
+  border-left: 8rpx solid #ffda44;
+  padding-left: 20rpx;
+  margin: 20rpx;
+  font-size: 28rpx;
+  color: #343233;
+  
+}
+
+.rank-title{
+  
+    /* margin-top: 250px; */
+    border-left: 8rpx solid #ffda44;
+    padding-left: 20rpx;
+    margin: 20rpx;
+    font-size: 28rpx;
+    color: #343233;
+    
+  
+}
+
+.rank{
+  display: flex;
+  color: #343233;
+
+  align-items: center;
+  width: 100%;
+  padding: 10rpx 20rpx;
+}
+
+.rank-img{
+  width: 80rpx;
+  height: 80rpx;
+  background-color: #ddd;
+  border-radius: 50%;
+  margin-right: 20rpx;
+}
+.rank-right{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 80rpx;
+  width: calc(100% - 140rpx);
+  font-size: 28rpx;
+
+}
+.rank-progress{
+  height: 10rpx;
+  border-radius: 10rpx;
+  background-color: #eee;
+  width: 100%;
+  overflow: hidden;
+
+}
+.title{
+  margin-right: 10rpx;
+}
+
+.bar{
+  height: 100%;
+  background-color: #ffda44;
+}
