--- a/miniprogram/pages/chart/chart.wxss
+++ b/miniprogram/pages/chart/chart.wxss
@@ -70,6 +70,18 @@ ec-canvas {
   
 }
 
+.rank-content{
+  position: fixed;
+  right: 0;
+  left: 0;
+  bottom: 100rpx;
+  top: 760rpx;
+  overflow: scroll;
+  padding-bottom: 20rpx;
+}
+.rank{
+  margin-bottom: 20rpx;
+}
 .rank-title{
   
     /* margin-top: 250px; */
