--- a/miniprogram/pages/profile/profile.wxml
+++ b/miniprogram/pages/profile/profile.wxml
@@ -4,14 +4,25 @@
 
 <view class="profile">
   <view class="top-bg">
-    <view class="profile-top clearfix">
-    <view class="fl avatar"></view>
-    <view class="fl nickname">菜鸟</view>
-    <view class="fr attendance">
-      <view class="attendance-img fl">
-        <image src="../../images/daka.png" mode="widthFix" class="a-img auto-img"></image>
-      </view> 
-      <view class="fr text">打卡</view> 
+    <view class="profile-top clearfix" bindtap="toAuth">
+    <view class="fl avatar">
+      <image src="{{userInfo.img}}" mode="widthFix" class="auto-img" wx:if="{{userInfo.img}}"></image>
+    </view>
+    <view class="fl nickname" >{{userInfo.nickname || '授权登录'}}</view>
+    <view class="fr attendance clearfix" catchtap="checkIn">
+
+      <view wx:if="{{!isCheckIn}}" class="clearfix">
+
+        <view class="attendance-img fl">
+          <image src="../../images/daka.png" mode="widthFix" class="a-img auto-img"></image>
+        </view> 
+        <view class="fr text">打卡</view> 
+
+      </view>
+
+      <view wx:else class="checkin-text">
+        已打卡
+      </view>
     </view>
     </view>
 
@@ -31,9 +42,9 @@
       </view>
     </view>
   </view>
-  <!-- 白色内容区域 -->
+  <!-- 当月账单内容区域 -->
   <view class="container">
-    <view class="bill">
+    <view class="bill" bindtap="goMonthDetail">
       <view class="bill-title clearfix">
         <view class="fl title">账单</view>
         <view class="fr arrow"><image src="../../images/arrow.png" mode="widthFix" class="auto-img"></image></view>
@@ -41,21 +52,21 @@
       <view class="bill-content clearfix">
         <view class="fl left">
           <view class="fl month ">
-          <text class="month-num">12</text>月
+          <text class="month-num">{{month}}</text>月
       </view>
         </view>
         <view class="fr right clearfix">
           <view class="fl content-item">
             <view class="item-title">收入</view>
-            <view class="item-num">0.00</view>
+            <view class="item-num">{{shouru||'0.00'}}</view>
           </view>
           <view class="fl content-item">
             <view class="item-title">支出</view>
-            <view class="item-num">0.00</view>
+            <view class="item-num">{{zhichu||'0.00'}}</view>
           </view>
           <view class="fl content-item">
             <view class="item-title">结余</view>
-            <view class="item-num">0.00</view>
+            <view class="item-num">{{surplus||'0.00'}}</view>
           </view>
         </view>
       </view>
@@ -65,7 +76,7 @@
     <!-- 预算 -->
     <view class="budget">
       <view class="budget-box clearfix">
-        <view class="fl budget-title">12月总预算</view>
+        <view class="fl budget-title">{{month}}月总预算</view>
        <view class="fr clearfix">
          <text class="all">查看全部</text>
         <view class="fr budget-arrow arrow"><image src="../../images/arrow.png" mode="widthFix" class="all-img auto-img"></image></view>
@@ -75,7 +86,10 @@
       <!-- 预算内容 -->
       <view class="budget-content clearfix">
         <view class="content-left fl">
-          <view class="round"></view>
+            <!-- 饼图 -->
+          <view class="pie">
+            <canvas canvas-id="pieCanvas"style="width:280rpx; height:280rpx;" ></canvas>
+          </view>
         </view>
 
         <view class="content-right fr">
@@ -89,11 +103,47 @@
           </view>
           <view class="month-budget clearfix">
             <view class="surplus-title fl">本月支出:</view>
-            <view class="surplus-title fr">10.00</view>
+            <view class="surplus-title fr">{{zhichu||'0.00'}}</view>
           </view>
         </view>
       </view>
 
+    </view>
+  </view>
+</view>
+
+<!-- 签到弹窗 -->
+
+<view class="cover" wx:if="{{isShow}}" bindtap="close">
+  <view class="sign-in">
+    <view class="close" catchtap="close">
+      <view class="line"></view>
+      <view class="line"></view>
+    </view>
+
+    <view class="sign-in-img">
+      <image src="../../images/checkIn.gif" class="auto-img" mode="widthFix"></image>
+    </view>
+
+    <view class="sign-in-content">
+      <view class="content-title">打卡成功</view>
+      <view class="stage">
+        <view class="stage-item">
+        <view class="sign-in-num">1</view>
+        <view class="sign-in-text">已连续打卡</view>
+      </view>
+      <view class="stage-item">
+        <view class="sign-in-num">71</view>
+        <view class="sign-in-text">记账总天数</view>
+      </view>
+      <view class="stage-item">
+        <view class="sign-in-num">8</view>
+        <view class="sign-in-text">记账总笔数</view>
+      </view>
+      </view>
+      <view class="content-rule" catchtap="goRule">
+        打卡规则
+      </view>
     </view>
   </view>
 </view>
