--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,6 +1,7 @@
 page{
   height: 100%;
   background-color: #f7f7f7;
+  overflow: hidden;
 
 }
 .fl{
@@ -35,4 +36,6 @@ clear: both;
   height: 0;
   color:transparent;
 } 
+
+
 
