--- a/miniprogram/pages/chart/chart.wxss
+++ b/miniprogram/pages/chart/chart.wxss
@@ -1,14 +1,26 @@
 /* miniprogram/pages/chart/chart.wxss */
 .tab{
-  padding: 20rpx 20rpx;
+  position: fixed;
+  right: 0;
+  left: 0;
+  top: 0;
+  height: 100rpx;
   background-color: #ffda44;
-
+  padding: 0 20rpx;
+  z-index: 1;
 }
+
+.pay-item,.time-item{
+  height: 50rpx;
+  line-height: 50rpx;
+}
+
 .pay-type{
   width: 220rpx;
   border-radius: 8rpx;
   border: 1rpx solid #343233;
-
+  box-sizing: border-box;
+  margin-top: 25rpx;
 
 }
 .time-type{
@@ -17,11 +29,14 @@
   border: 1rpx solid #343233;
   overflow: hidden;
   box-sizing: border-box;
+  box-sizing: border-box;
+  margin-top: 25rpx;
+
+
 }
 .pay-item{
   color: pay-item;
   font-size: 28rpx;
-  padding: 10rpx 0;
   width: 50%;
   text-align: center;
 
@@ -29,7 +44,6 @@
 .time-item{
   color: pay-item;
   font-size: 28rpx;
-  padding: 10rpx 0;
   width: 33.33%;
   text-align: center;
 
@@ -62,22 +76,19 @@ ec-canvas {
 
 .total{
   /* margin-top: 250px; */
+  height: 36rpx;
+  line-height: 36rpx;
   border-left: 8rpx solid #ffda44;
   padding-left: 20rpx;
-  margin: 20rpx;
+  margin: 10rpx 20rpx 0 20rpx;
   font-size: 28rpx;
   color: #343233;
   
 }
 
 .rank-content{
-  position: fixed;
-  right: 0;
-  left: 0;
-  bottom: 100rpx;
-  top: 760rpx;
-  overflow: scroll;
-  padding-bottom: 20rpx;
+padding-left:20rpx ;
+
 }
 .rank{
   margin-bottom: 20rpx;
@@ -85,9 +96,12 @@ ec-canvas {
 .rank-title{
   
     /* margin-top: 250px; */
+    height: 36rpx;
+    line-height: 36rpx;
     border-left: 8rpx solid #ffda44;
     padding-left: 20rpx;
     margin: 20rpx;
+    margin-bottom: 10rpx;
     font-size: 28rpx;
     color: #343233;
     
@@ -100,7 +114,7 @@ ec-canvas {
 
   align-items: center;
   width: 100%;
-  padding: 10rpx 20rpx;
+  padding: 10rpx 0;
 }
 
 .rank-img{
@@ -134,4 +148,22 @@ ec-canvas {
 .bar{
   height: 100%;
   background-color: #ffda44;
+}
+
+.empty{
+  width: 100%;
+  height: 100%;
+  line-height: 800rpx;
+  text-align: center;
+  color: #343434;
+  font-size: 36rpx;
+}
+.hide{
+  display: none;
+}
+
+.chart-content{
+  margin-top: 100rpx;
+  height: calc(100% - 200rpx);
+  overflow: scroll;
 }
