--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -110,3 +110,11 @@
   padding-bottom: 10rpx;
 
 }
+
+.empty{
+  height: 800rpx;
+  line-height: 800rpx;
+  color: #343233;
+  font-size: 36rpx;
+  text-align: center;
+}
