--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -30,6 +30,11 @@ clear: both;
   border-top: 20rpx solid #000;
 }
 
+.scale-text{
+  display: inline-block;
+  font-size: 24rpx;
+}
+
 ::-webkit-scrollbar{
   display: none;
   width: 0;
