--- a/miniprogram/pages/booking/booking.wxss
+++ b/miniprogram/pages/booking/booking.wxss
@@ -85,8 +85,104 @@ page{
 }
 
 .active-icon>.img{
+  -webkit-animation: shaky-slow .5s ease-in-out;
+  animation: shaky-slow .5s ease-in-out;
   transform: scale(1.1);
   
+}
+
+@-webkit-keyframes shaky-slow {
+  0% {
+      -webkit-transform: translate(0px, 0px) rotate(0deg);
+  }
+ 
+  10% {
+      -webkit-transform: translate(1.4px, 0px) rotate(-2deg);
+  }
+ 
+  20% {
+      -webkit-transform: translate(1px, 1px) rotate(-0.5deg);
+  }
+  22% {
+      -webkit-transform: translate(1.3px, 1.5px) rotate(-2deg);
+  }
+ 
+  30% {
+      -webkit-transform: translate(-1.3px, -1.3px) rotate(-1.5deg);
+  }
+ 
+  40% {
+      -webkit-transform: translate(-1.4px, -1px) rotate(-0.5deg);
+  }
+ 
+  50% {
+      -webkit-transform: translate(1.6px, 1.6px) rotate(1.5deg);
+  }
+ 
+  60% {
+      -webkit-transform: translate(1.3px, 1.6px) rotate(-0.5deg);
+  }
+ 
+  70% {
+      -webkit-transform: translate(-1.6px, 1px) rotate(1.5deg);
+  }
+
+  80% {
+      -webkit-transform: translate(1.4px, 1.6px) rotate(2deg);
+  }
+ 
+  90% {
+      -webkit-transform: translate(-1.6px, -1.6px) rotate(-2deg);
+  }
+
+  98% {
+      -webkit-transform: translate(1.3px, 1px) rotate(-0.5deg) scale(1.1);
+  }
+}
+@keyframes shaky-slow {
+  0% {
+      transform: translate(0px, 0px) rotate(0deg);
+  }
+ 
+  10% {
+      transform: translate(1.4px, 0px) rotate(-2deg);
+  }
+
+  20% {
+      transform: translate(1px, 1px) rotate(-0.5deg);
+  }
+
+  30% {
+      transform: translate(-1.3px, -1.3px) rotate(-1.5deg);
+  }
+  
+  40% {
+      transform: translate(-1.4px, -1px) rotate(-0.5deg);
+  }
+ 
+  50% {
+      transform: translate(1.6px, 1.6px) rotate(1.5deg);
+  }
+
+  60% {
+      transform: translate(1.3px, 1.6px) rotate(-0.5deg);
+  }
+  
+  70% {
+      transform: translate(-1.6px, 1px) rotate(1.5deg);
+  }
+  
+  80% {
+      transform: translate(1.4px, 1.6px) rotate(2deg);
+  }
+ 
+  90% {
+      transform: translate(-1.6px, -1.6px) rotate(-2deg);
+  }
+  
+  98% {
+      transform: translate(1.3px, 1px) rotate(-0.5deg) scale(1.1);
+  }
 }
 .active-icon>.text{
   font-weight: bold;
