--- a/miniprogram/pages/chart/chart.wxml
+++ b/miniprogram/pages/chart/chart.wxml
@@ -33,7 +33,7 @@
   <view class="rank-title" wx:if="{{isHasData}}" >{{title}}排行榜</view>
   
   <!-- 排行榜 -->
-  <view class="rank-content">
+  <view class="rank-content" wx:if="{{isHasData}}">
   <view class="rank" wx:for="{{bookingDataType}}" wx:key="index" data-ids="{{item.ids}}"bindtap="viewBookData">
     <view class="rank-img">
       <image src="{{item.icon}}" mode="widthFix" class="auto-img"></image>
@@ -45,8 +45,11 @@
         <view class="count fr">{{item.count}}</view>
       </view>
   
-      <view class="rank-progress">
+      <!-- <view class="rank-progress">
         <view class="bar" style="width:{{item.percent}};"></view>
+      </view> -->
+      <view class="progress-box">
+        <progress percent="{{item.progressPercent}}" border-radius="5" color="#ffdd4a" active stroke-width="5" />
       </view>
     </view>
   </view>
