--- a/miniprogram/pages/history/history.wxss
+++ b/miniprogram/pages/history/history.wxss
@@ -4,8 +4,10 @@
 } */
 .bill-bg{
   width: 100%;
+  height: 240rpx;
   background-color: #ffda44;
   padding: 0 20rpx 20rpx 0;
+  box-sizing: border-box;
 
 }
 .year{
@@ -15,7 +17,8 @@
 .triangle{
   position: absolute;
   left: 140rpx;
-  top: 10rpx;
+  top: 50%;
+  transform: translateY(-30%);
 
 }
 .main-text{
@@ -64,12 +67,14 @@ margin: 20rpx 0;
   margin: 20rpx 0;
 }
 .month-list{
+  height: 40rpx;
+  line-height: 40rpx;
   text-align: center;
   font-size: 20rpx;
   color: #969696;
-  padding: 10rpx 0;
   border-bottom: 1rpx solid #eaeaea;
 }
+
 .month{
   width: 120rpx;
 }
@@ -91,6 +96,6 @@ margin: 20rpx 0;
   top: 240rpx;
   left: 0;
   right: 0;
-  bottom: 120rpx;
+  bottom: 100rpx;
   overflow: scroll;
 }
