--- a/miniprogram/pages/monthDetail/monthDetail.wxml
+++ b/miniprogram/pages/monthDetail/monthDetail.wxml
@@ -3,7 +3,7 @@
 
 
   <view class="detail-top">
-    <view class="top-title">2020年12月账单</view>
+    <view class="top-title">2020年{{bookingData.month}}月账单</view>
     <view class="stage" bindtap="goAuth">
 
         <view class="avatar">
@@ -12,12 +12,12 @@
     <view class="nickname">{{userInfo.nickname||'登录授权'}}</view>
     </view>
   
-    <view class="register-history">这是我与金鱼记账相识的第21天</view>
+    <view class="register-history">这是我与金鱼记账相识的第{{meetDay}}天</view>
   </view>
   
   <!-- 月结余部分 -->
-  <view class="month-summary">
-    <view class="month-title">本月结余:<text class="month-surplus">-32.35</text></view>
+  <view class="month-summary" wx:if="{{isHasData}}">
+    <view class="month-title">本月结余:<text class="month-surplus">{{bookingData.surplus}}</text></view>
     
 
     <view class="month-chart">
@@ -26,12 +26,12 @@
         <view>收入</view>
       </view>
 
-      <view class="chart-prograss">
+      <view class="chart-prograss" >
         <view class="chart-zhichu">
-          <view class="progress" style="background:#ffda44;width:75%"><view class="num">30</view></view>
+          <view class="progress" style="background:#ffda44;width:{{zhichuPersent}}"><view class="num">{{bookingData.zhichu}}</view></view>
         </view>
         <view class="chart-shouru">
-          <view class="progress" style="background:#feb127;width:30%"><view class="num">3.5</view></view>
+          <view class="progress" style="background:#feb127;width:{{shouruPersent}}"><view class="num">{{bookingData.shouru}}</view></view>
 
         </view>
       </view>
@@ -40,27 +40,85 @@
 
   <!-- 类饼图 -->
 
-  <view class="month-type">
+  <view class="month-type {{isHasData ? '' : 'hide'}}">
     <view class="chart" style="width:100%;height:250px;">
     <ec-canvas id="mychart-dom-pie2" canvas-id="mychart-pie2" ec="{{ ec }}"></ec-canvas>
   </view>
-  <view class="zhichu-rank">支出排行榜</view>
+  <view class="zhichu-rank">支出排行</view>
+  <view class="list" >
+        <view class="list-item clearfix" wx:for="{{rankData}}" wx:key="index" data-id="{{item._id}}" bindtap="goDetail">
+          <view class="fl list-item-rank">{{index+1}}</view>
+          <view class="fl list-item-img">
+            <image class="auto-img list-icon" src="{{item.typeIcons.icon}}" mode="widthFix"></image>
+          </view>
+          <view class="fl list-info">
+            <view class="list-item-describe fl">
+              <view class="top-text">
+                <text class="type fl">{{item.comment || item.typeIcons.title}}</text>
+       
+              </view>
+              <view class="comment">{{item.date}}</view>
+            </view>
+            <view class="list-item-money fr ">
+            <view class="fl ">{{'-'+item.money}}</view>
+            </view>
+          </view>
+        </view>
+      </view>
+
   </view>
 
 <!-- 折线图 -->
-  <view class="month-type">
+  <view class="month-type {{isHasData ? '' : 'hide'}}">
     <view class="chart" style="width:100%;height:250px;">
     <ec-canvas id="mychart-dom-pie2" canvas-id="mychart-pie2" ec="{{ ecs }}"></ec-canvas>
   </view>
-  <view class="zhichu-rank">支出排行榜</view>
+   <view class="qushi-box">
+    <view class="zhichu-qushi">
+    <view class="qushi-title">单日支出最高</view>
+    <view class="qushi-num">{{dayTopZhichu}}</view>
+    </view>
+    <view class="zhichu-qushi">
+    <view class="qushi-title">日均支出</view>
+    <view class="qushi-num">{{averageDayZhichu}}</view>
+    </view>
+    <view class="zhichu-qushi">
+    <view class="qushi-title">本月支出</view>
+    <view class="qushi-num">{{monthTotalZhichu}}</view>
+    </view>
+  </view>
   </view>
 
-  <!-- 折线图 -->
-  <view class="month-type">
+  <!-- zhu线图 -->
+  <view class="month-type {{isHasData ? '' : 'hide'}}">
     <view class="chart" style="width:100%;height:250px;">
     <ec-canvas id="mychart-dom-pie2" canvas-id="mychart-pie2" ec="{{ ect }}"></ec-canvas>
+    </view>
+  <view class="zhichu-rank">{{bookingData.month}}月支出前三的类别</view>
+
+  <view class="list" >
+        <view class="list-item clearfix" wx:for="{{typeData}}" wx:key="index" data-id="{{item._id}}" bindtap="goDetail">
+          <view class="fl list-item-rank">{{index+1}}</view>
+          <view class="fl list-item-img">
+            <image class="auto-img list-icon" src="{{item.typeIcons.icon}}" mode="widthFix"></image>
+          </view>
+          <view class="fl list-info">
+            <view class="list-item-describe fl">
+        
+                <view class="type  type-title fl">{{item.typeIcons.title}}</view>
+  
+            </view>
+            <view class="list-item-money fr ">
+            <view class="fl ">{{'-'+item.money}}</view>
+            </view>
+          </view>
+        </view>
+      </view>
   </view>
-  <view class="zhichu-rank">支出排行榜</view>
+
+  <view class="empty" wx:if="{{!isHasData}}">
+    <view>您本月暂时还没有记账，快去记账吧~</view>
   </view>
+  
 </view>
 
