--- a/miniprogram/pages/monthDetail/monthDetail.wxss
+++ b/miniprogram/pages/monthDetail/monthDetail.wxss
@@ -107,6 +107,7 @@
 .progress{
 position: relative;
 height: 100%;
+max-width: 85%;
 border-top-right-radius: 20rpx;
 border-bottom-right-radius: 20rpx;
 }
@@ -115,13 +116,149 @@ border-bottom-right-radius: 20rpx;
   font-size: 24rpx;
   color: #1c1d21;
   position: absolute;
-  right: -50rpx;
+  right: -100rpx;
   top: 50%;
   transform: translateY(-50%);
 }
+
+.zhichu-rank{
+  font-size: 24rpx;
+  color: #8b8b8b;
+  margin-left: 20rpx;
+  margin-bottom: 10rpx;
+}
+
+.list{
+  background-color: #fff;
+}
+.list-item{
+  padding: 20rpx;
+  padding-right: 40rpx;
+  margin: 10rpx 0;
+}
+.list-item:nth-child(1){
+  margin-top:0 ;
+}
+.list-item-rank{
+  width:80rpx;
+  height: 80rpx;
+  line-height: 80rpx;
+  text-align: center;
+  font-size: 32rpx;
+  color: #909090;
+}
+.list-item-img{
+  width: 80rpx;
+  height: 80rpx;
+  background-color: #ddd;
+  border-radius: 50%;
+}
+.list-icon{
+  height: 80rpx;
+}
+.list-info{
+  margin-left: 20rpx;
+  height: 80rpx;
+  padding: 10rpx 0 10rox 20rpx;
+  width: calc(100% - 180rpx);
+  /* border-bottom: 1rpx solid #e8e8e8 */
+}
+.list-item-money{
+  font-size: 28rpx;
+  line-height: 80rpx;
+  color: #343233;
+}
+/* .list-item-money.shouru{
+  color: #e4393c;
+}
+.list-item-money.zhichu{
+  color: #00b26a;
+} */
+.list-item-describe{
+  color: #666;
+  font-size: 22rpx;
+}
+.top-text{
+  height: 50rpx;
+}
+.comment{
+  height: 30rpx;
+  line-height: 30rpx
+  
+}
+.type{
+  font-size: 28rpx;
+  font-weight: bold;
+  margin-right: 40rpx;
+}
+.not-comment{
+  line-height: 80rpx
+}
+.shouru{
+  color: #e4393c
+}
+.zhichu{
+  color: #00b26a
+}
+.date{
+  margin-left: 40rpx;
+  
+}
+.account{
+width: 80rpx;
+}
+
 
 .month-type{
   width: 100%;
   background-color: #fff;
   margin-top: 20rpx;
+  padding-bottom: 20rpx;
+}
+
+.type-title {
+  height: 80rpx;
+  line-height: 80rpx;
+  margin-right:30rpx ;
+}
+.qushi-box{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 40rpx;
+}
+.zhichu-qushi{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: left;
+}
+
+.qushi-title{
+  font-size: 26rpx;
+  color: #999999;
+  width: 100%;
+}
+.qushi-num{
+  font-size: 36rpx;
+  color: #1b1d21;
+  font-weight: bold;
+  margin-top: 20rpx;
+  width: 100%;
+
+}
+
+.empty{
+  width: 100%;
+  height: 800rpx;
+  line-height: 800rpx;
+  text-align: center;
+  color: #343434;
+  font-size: 36rpx;
+}
+
+.hide{
+  display: none;
 }
