--- a/miniprogram/pages/detail/detail.wxss
+++ b/miniprogram/pages/detail/detail.wxss
@@ -1,25 +1,32 @@
+.my-booking{
+  padding-top: 10rpx;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+}
 .list{
   background-color: #fff;
 }
 .list-item{
-  padding: 20rpx;
+  padding: 10rpx 0 10rpx 20rpx;
   margin: 10rpx 0;
 }
 .list-item:nth-child(1){
   margin-top:0 ;
 }
 .list-item-img{
-  width: 80rpx;
-  height: 80rpx;
+  width: 60rpx;
+  height: 60rpx;
+  margin: 10rpx 0;
   background-color: #ddd;
   border-radius: 50%;
 }
 .list-icon{
-  height: 80rpx;
+  height: 60rpx;
 }
 .list-info{
   margin-left: 14rpx;
-  height: 80rpx;
+  height: 90rpx;
   padding: 10rpx 0 10rox 20rpx;
   width: calc(100% - 100rpx);
   border-bottom: 1rpx solid #e8e8e8
