--- a/miniprogram/pages/chart/chart.wxml
+++ b/miniprogram/pages/chart/chart.wxml
@@ -1,30 +1,34 @@
 <!--miniprogram/pages/chart/chart.wxml-->
 <tabbar tabbar="{{tabbar}}"></tabbar>
 
-<view class="tab clearfix">
-  <view class="pay-type fl clearfix">
-    <view bindtap="changePay" data-pay="zhichu" class="pay-item fl {{payType=='zhichu'? 'active' : ''}}">支出</view>
-    <view bindtap="changePay" data-pay="shouru" class="pay-item fl {{payType=='shouru'? 'active' : ''}}">收入</view>
-  </view>
-  <view class="time-type fr clearfix">
-    <view bindtap="changeTime" data-time="day" class="time-item fl {{timeType=='day'? 'active' : ''}}">日</view>
-    <view bindtap="changeTime" data-time="month" class="time-item fl {{timeType=='month' ? 'active' : ''}}">月</view>
-    <view bindtap="changeTime" data-time="year" class="time-item fl {{timeType=='year'? 'active' : ''}}">年</view>
-  </view>
-</view>
+<cover-view class="tab clearfix">
+  <cover-view class="pay-type fl clearfix">
+    <cover-view bindtap="changePay" data-pay="zhichu" class="pay-item fl {{payType=='zhichu'? 'active' : ''}}">支出</cover-view>
+    <cover-view bindtap="changePay" data-pay="shouru" class="pay-item fl {{payType=='shouru'? 'active' : ''}}">收入</cover-view>
+  </cover-view>
+  <cover-view class="time-type fr clearfix">
+    <cover-view bindtap="changeTime" data-time="day" class="time-item fl {{timeType=='day'? 'active' : ''}}">日</cover-view>
+    <cover-view bindtap="changeTime" data-time="month" class="time-item fl {{timeType=='month' ? 'active' : ''}}">
+      <cover-view class="line-left"></cover-view>
+      <cover-view class="line-right"></cover-view>
+      月
+    </cover-view>
+    <cover-view bindtap="changeTime" data-time="year" class="time-item fl {{timeType=='year'? 'active' : ''}}">年</cover-view>
+  </cover-view>
+</cover-view>
 
 <!-- 内容部分 -->
 <view class="chart-content">
 
 
-  <view class="total"  wx:if="{{isHasData}}">总{{title}}：{{total}}</view>
+  <view class="total"  wx:if="{{isHasData}}">总{{title}}：<view class="allzhichu">{{total}}</view></view>
   
   <!-- <view class="pie">
         <canvas canvas-id="pieCanvas"style="width:{{width+'px'}}; height:620rpx;" ></canvas>
   </view> -->
   
-  <view class="chart {{isHasData ? '' : 'hide'}}" style="width:100%;height:250px;">
-    <ec-canvas id="mychart-dom-pie2" canvas-id="mychart-pie2" ec="{{ ec }}"></ec-canvas>
+  <view class="chart {{isHasData ? '' : 'hide'}}" style="width:100%;height:270px;">
+    <ec-canvas force-use-old-canvas="true"  id="mychart-dom-pie2" canvas-id="mychart-pie2" ec="{{ ec }}"></ec-canvas>
   </view>
   <view class="empty" wx:if="{{!isHasData}}">
     <view>您暂时还没有记账，快去记账吧~</view>
