--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,7 +1,7 @@
 page{
-  height: 100%;
+  /* height: 100%; */
   background-color: #f7f7f7;
-  overflow: hidden;
+  /* overflow: hidden; */
 
 }
 .fl{
