--- a/miniprogram/pages/chart/chart.wxss
+++ b/miniprogram/pages/chart/chart.wxss
@@ -12,25 +12,29 @@
 
 .pay-item,.time-item{
   height: 50rpx;
-  line-height: 50rpx;
+  line-height: 42rpx;
 }
 
 .pay-type{
+  padding: 0;
+  height: 50rpx;
   width: 220rpx;
   border-radius: 8rpx;
-  border: 1rpx solid #343233;
-  box-sizing: border-box;
+  border: 2rpx solid #343233;
   margin-top: 25rpx;
+  box-sizing: border-box;
+
 
 }
 .time-type{
+  padding: 0;
+  height: 50rpx;
   width: 330rpx;
   border-radius: 8rpx;
-  border: 1rpx solid #343233;
+  border: 2rpx solid #343233;
   overflow: hidden;
-  box-sizing: border-box;
-  box-sizing: border-box;
   margin-top: 25rpx;
+  box-sizing: border-box;
 
 
 }
@@ -39,6 +43,9 @@
   font-size: 28rpx;
   width: 50%;
   text-align: center;
+  height: 100%;
+  box-sizing: border-box;
+
 
 }
 .time-item{
@@ -46,12 +53,25 @@
   font-size: 28rpx;
   width: 33.33%;
   text-align: center;
+  box-sizing: border-box;
+  height: 100%;
+
 
 }
-.time-item:nth-child(2){
-  border-left: 1rpx solid #343434;
-  border-right: 1rpx solid #343434;
-  box-sizing: border-box;
+
+.line-left{
+
+  height: 100%;
+  width: 2rpx;
+  background-color: #343434;
+  float: left;
+}
+.line-right{
+
+  height: 100%;
+  width: 2rpx;
+  background-color: #343434;
+  float: right;
 }
 .pay-item.active{
   background-color: #343434;
@@ -78,9 +98,9 @@ ec-canvas {
   /* margin-top: 250px; */
   height: 36rpx;
   line-height: 36rpx;
-  border-left: 8rpx solid #ffda44;
+  border-left: 10rpx solid #ffda44;
   padding-left: 20rpx;
-  margin: 10rpx 20rpx 0 20rpx;
+  margin: 20rpx 20rpx 0 20rpx;
   font-size: 28rpx;
   color: #343233;
   
@@ -98,7 +118,7 @@ padding-left:20rpx ;
     /* margin-top: 250px; */
     height: 36rpx;
     line-height: 36rpx;
-    border-left: 8rpx solid #ffda44;
+    border-left: 10rpx solid #ffda44;
     padding-left: 20rpx;
     margin: 20rpx;
     margin-bottom: 10rpx;
@@ -166,4 +186,9 @@ padding-left:20rpx ;
   margin-top: 100rpx;
   height: calc(100% - 200rpx);
   overflow: scroll;
+  padding-bottom: 140rpx;
+}
+.allzhichu{
+  font-weight: bold;
+  display: inline-block;
 }
